--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -4,19 +4,29 @@
     border: .5px solid #ccc;
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
     margin-bottom: 60px;
-    // max-height: 427px;
+
+    &cardH {
+        max-height: 425px;
+            
+    }
 
     .img-muestra { 
         overflow: hidden;
         width: 100%;
         line-height: 420px;
         text-align: center;
-        padding: 2px 2px;
+        margin: 10px 5px;
+        border-radius: 4px;
+
+
+        width: 2000px;
+        max-width: 600px;
 
         img {
             width: 100%;
-            border-radius: 4px;
         }
+
+
     }
 
 
